2015-01-21	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/changelogupdate.sh: only writing staged files to the changelog

	* src/mountasuser.sh: convenience functions and additional error checking

2014-11-22	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/watchscroll.sh: watch-like capabilities, but with scrolling


2014-11-21	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: execution duration information added
	--nomishaps option added to hide unused and duplicate citations

2014-11-18	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* autogen.sh: removing COPYING

	* src/countcolorpages.sh: script which counts all colored pages in pdf files

	* src/screenshot.sh: exporting to png files

2014-11-15	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/keymap.sh: using german deadacute if available

2014-11-05	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: correctly handling bibtex updates
	tracking changes in .bst files (bibliography styles)

2014-10-22	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/transpose.sh: script to transpose rows and columns added

2014-10-06	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: showing multiply-defined labels

2014-10-02	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: showing undefined references and citations after compilation

2014-09-15	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: description text added

2014-09-12	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: "Press Enter" added

2014-09-11	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: re-compiling on changes to the toc, lof, loa or lot
	using `sync` instead of some cheap hack

	* src/parallel.sh: removed in favor of gnu parallel

2014-09-04	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/latexrefre.sh: looking for .pdf_tex files, too
	looking for a tex file that contains '\documentclass'
	updating on .sty files
